--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -12,10 +12,9 @@
 }
 
 main {
-    height: calc(100% - 12rem); /* 6rem for nav + 6rem for footer */
+    margin-top: 3rem;
     overflow-y: auto;
     scroll-behavior: smooth;
-    padding-bottom: 3rem; /* Avoid clipping last section under footer */
 }
 
 /* Reset & base styles */
@@ -43,6 +42,21 @@ a {
 a:hover {
     color: var(--primary);
     font-weight: 900;
+}
+
+button {
+    background: transparent;
+    color: white;
+    border: 2px solid var(--primary);
+    padding: 0.75rem 1.5rem;
+    border-radius: 1rem;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+button:hover {
+    background: var(--primary-variant);
 }
 
 /* Navbar styling */
@@ -83,14 +97,14 @@ nav a {
 
 /* Footer styling */
 footer {
-    position: fixed;
+    /* position: fixed; */
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     gap: 2rem;
     left: 0;
-    bottom: 0;
+    /* bottom: 0; */
     width: 100%;
     height: 6rem;
     padding: 1rem 0;
